--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-The irbem branch created. It will be the one used for N1-SatRisk 
+There are serveral branches/versions of the implementation. Please use the version in the irbem or spacepy branches for now. 
+
+Implementaion in other branches is still incomplete ...
+
    
 
