--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+
+This is the Python reimplementation of the MSM code, which was devellopped in the ESHIEM project funded by ESA.
+
+https://spitfire.estec.esa.int/trac/ESHIEM/browser/msm
+
+https://spitfire.estec.esa.int/trac/ESHIEM/browser/doc/Deliverables/WP4000/TN2a%20v1.5.pdf
+
+However, access to the above links are restricted by ESA at the momemt.
+
 There are serveral branches/versions of the implementation. Please use the version in the irbem or spacepy branches for now. 
 
 Implementaion in other branches is still incomplete ...
